[gd_scene load_steps=15 format=3 uid="uid://bcjsbq03qg6hf"]

[ext_resource type="Texture2D" uid="uid://d1r2yv4tuyc8o" path="res://assets/mixing_counter.png" id="1_uinbw"]
[ext_resource type="Texture2D" uid="uid://dsaimry5meh6c" path="res://assets/cake_essence.png" id="2_qm6x5"]
[ext_resource type="Script" uid="uid://b3bsb5k4wa00x" path="res://scripts/making_minigame.gd" id="3_bro0v"]
[ext_resource type="Texture2D" uid="uid://8q6oduejvoel" path="res://assets/bread_essence.png" id="3_vcrw5"]
[ext_resource type="Texture2D" uid="uid://b76is0edr2npd" path="res://assets/strawberry.png" id="5_5g1xl"]
[ext_resource type="Texture2D" uid="uid://dp6wi54alvm4h" path="res://assets/mixing_bowl.webp" id="5_sfqvn"]
[ext_resource type="Texture2D" uid="uid://bvuu4wexq3x0n" path="res://assets/lemon.png" id="6_x6752"]
[ext_resource type="Texture2D" uid="uid://b16fpix34sg5k" path="res://assets/chocolate.png" id="7_43pj2"]
[ext_resource type="Texture2D" uid="uid://dnyesyphuootw" path="res://assets/vanilla.png" id="8_kegyc"]
[ext_resource type="FontFile" uid="uid://cjp853o8vg27q" path="res://assets/Jua-Regular.ttf" id="11_dgvn0"]
[ext_resource type="PackedScene" uid="uid://bfoxjtagov6tq" path="res://scenes/taste_meters.tscn" id="12_ipfxc"]

[sub_resource type="Theme" id="Theme_knw4o"]
default_font = ExtResource("11_dgvn0")
default_font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5p450"]
bg_color = Color(1, 0.67451, 0.372549, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.270588, 0.101961, 0.0705882, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxsge"]
bg_color = Color(0.270588, 0.101961, 0.0705882, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.67451, 0.372549, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="mixing-minigame" type="Node2D" node_paths=PackedStringArray("strawberry", "lemon", "chocolate", "vanilla", "cake", "bread", "bowl")]
script = ExtResource("3_bro0v")
strawberry = NodePath("strawberry")
lemon = NodePath("lemon")
chocolate = NodePath("chocolate")
vanilla = NodePath("vanilla")
cake = NodePath("cake_essence")
bread = NodePath("bread_essence")
bowl = NodePath("mixing_bowl")

[node name="MixingCounter" type="Sprite2D" parent="."]
position = Vector2(570, 320)
texture = ExtResource("1_uinbw")

[node name="bread_essence" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 123.0
offset_top = 211.0
offset_right = 282.0
offset_bottom = 418.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 100)
texture = ExtResource("3_vcrw5")

[node name="cake_essence" type="TextureRect" parent="."]
offset_left = 298.0
offset_top = 211.0
offset_right = 458.0
offset_bottom = 418.0
pivot_offset = Vector2(80, 100)
texture = ExtResource("2_qm6x5")

[node name="mixing_bowl" type="TextureRect" parent="."]
offset_left = 595.0
offset_top = 92.0
offset_right = 1595.0
offset_bottom = 1092.0
scale = Vector2(0.44, 0.44)
texture = ExtResource("5_sfqvn")

[node name="strawberry" type="TextureRect" parent="."]
offset_left = 310.0
offset_top = 433.0
offset_right = 424.0
offset_bottom = 547.0
rotation = 0.145566
pivot_offset = Vector2(60, 50)
texture = ExtResource("5_5g1xl")

[node name="lemon" type="TextureRect" parent="."]
offset_left = 143.0
offset_top = 422.0
offset_right = 281.0
offset_bottom = 560.0
pivot_offset = Vector2(70, 70)
texture = ExtResource("6_x6752")

[node name="chocolate" type="TextureRect" parent="."]
offset_left = 476.0
offset_top = 292.0
offset_right = 540.0
offset_bottom = 424.0
pivot_offset = Vector2(32, 62)
texture = ExtResource("7_43pj2")

[node name="vanilla" type="TextureRect" parent="."]
offset_left = 548.0
offset_top = 292.0
offset_right = 612.0
offset_bottom = 424.0
pivot_offset = Vector2(32, 62)
texture = ExtResource("8_kegyc")

[node name="taste_meter" parent="." instance=ExtResource("12_ipfxc")]
position = Vector2(550, 113)
scale = Vector2(3.16, 3.16)

[node name="done_button" type="Button" parent="."]
offset_left = 858.0
offset_top = 479.0
offset_right = 1011.0
offset_bottom = 564.0
theme = SubResource("Theme_knw4o")
theme_override_colors/font_color = Color(0.270588, 0.101961, 0.0705882, 1)
theme_override_colors/font_focus_color = Color(0.27058825, 0.101960786, 0.07058824, 1)
theme_override_colors/font_pressed_color = Color(1, 0.67451, 0.372549, 1)
theme_override_colors/font_hover_color = Color(1, 0.67451, 0.372549, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.6745098, 0.37254903, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_5p450")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_5p450")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5p450")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_5p450")
theme_override_styles/hover = SubResource("StyleBoxFlat_pxsge")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pxsge")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_pxsge")
theme_override_styles/focus = SubResource("StyleBoxFlat_5p450")
text = "done"

[connection signal="ingredient_clicked" from="." to="." method="_on_ingredient_clicked"]
[connection signal="mouse_entered" from="bread_essence" to="." method="_on_bread_essence_mouse_entered"]
[connection signal="mouse_exited" from="bread_essence" to="." method="_on_bread_essence_mouse_exited"]
[connection signal="mouse_entered" from="cake_essence" to="." method="_on_cake_essence_mouse_entered"]
[connection signal="mouse_exited" from="cake_essence" to="." method="_on_cake_essence_mouse_exited"]
[connection signal="mouse_entered" from="strawberry" to="." method="_on_strawberry_mouse_entered"]
[connection signal="mouse_exited" from="strawberry" to="." method="_on_strawberry_mouse_exited"]
[connection signal="mouse_entered" from="lemon" to="." method="_on_lemon_mouse_entered"]
[connection signal="mouse_exited" from="lemon" to="." method="_on_lemon_mouse_exited"]
[connection signal="mouse_entered" from="chocolate" to="." method="_on_chocolate_mouse_entered"]
[connection signal="mouse_exited" from="chocolate" to="." method="_on_chocolate_mouse_exited"]
[connection signal="mouse_entered" from="vanilla" to="." method="_on_vanilla_mouse_entered"]
[connection signal="mouse_exited" from="vanilla" to="." method="_on_vanilla_mouse_exited"]
[connection signal="pressed" from="done_button" to="." method="_on_done_button_pressed"]
